--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,7 +1,7 @@
 @page "/new-bug"
 
 <h3>Add New Bug</h3>
-<EditForm Model="@AddBug">
+<EditForm Model="AddBug">
 	<InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"/>
 	<InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"/>
 	<InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"/>
