--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -9,5 +9,17 @@
 </EditForm>
 
 @code {
-	public Bug AddBug { get; set; } = new Bug();
+    [Inject]
+    public IBugService BugService { get; set; }
+
+    [Inject]
+    public NavigationManager NavService { get; set; }
+
+    public Bug AddBug { get; set; } = new Bug();
+
+    protected void HandleValidSubmit()
+    {
+        BugService.AddBug(AddBug);
+        NavService.NavigateTo("");
+    }
 }
