--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -1,3 +1,6 @@
-﻿@page "/"
+@page "/"
+@using BugTrackerUI.Components
 
-<p>This dashboard will begin to fill with widgets as you develop.</p>
+<p>This is the home page</p>
+
+<BugList />
